# mini_projects

./: README.md
Easy/: #13.c
LIN Frame Encoder + Classic Checksum/: input_generator.py  inputs.txt  main.c
LIN Frame Encoder + Classic Checksum/CMake/: CMakeLists.txt  README_BUILD.md  build.ps1  build.sh
LIN Frame Encoder + Classic Checksum/code/: CMakeLists.txt  input_generator.py  lin_checksum.c  lin_checksum.h  main.c
LIN Frame Encoder + Classic Checksum/gtests/: CMakeLists.txt  test_main.cpp
